compiler/tests/errortests/arithmetic/arithmetic-divide-string.txt
FILENAME:4:26: error: Could not determine type of initial value for variable 'result'.
    let result : i32 = x / s;  // Error: cannot divide i32 by string
                         ^
FILENAME:4:26: error: Type mismatch in binary expression: left is of type 'i32', right is of type 'string'.
    let result : i32 = x / s;  // Error: cannot divide i32 by string
                         ^
